Fix feedback z-index

--- a/client/src/ui/Feedback/index.styl
+++ b/client/src/ui/Feedback/index.styl
@@ -4,17 +4,18 @@
   top: 50%;
   width: 120px;
   right: -48px;
+  transform: rotate(90deg);
   text-align: center;
   padding: 3px 6px;
   line-height: 20px;
   box-sizing: border-box;
   white-space: nowrap;
   overflow: hidden;
+  z-index: 99;
 
   background: #000;
   color: #fff;
   border-radius: 0 0 6px 6px;
-  transform: rotate(90deg);
 
   border: 2px solid transparent;
   opacity: 0.7;
